@@ -234,6 +234,9 @@ int main(int argc, const char** argv) {
   evql_conf_set(conf, "server.c2s_idle_timeout", "1800000000");
   evql_conf_set(conf, "server.s2s_io_timeout", "1000000");
   evql_conf_set(conf, "server.s2s_idle_timeout", "5000000");
+  evql_conf_set(conf, "server.s2s_pool_max_connections_per_host", "4");
+  evql_conf_set(conf, "server.s2s_pool_max_connections", "256");
+  evql_conf_set(conf, "server.s2s_pool_linger_timeout", "2000000");
   evql_conf_set(conf, "server.http_io_timeout", "1000000");
   evql_conf_set(conf, "server.heartbeat_interval", "1000000");
   evql_conf_set(conf, "server.query_progress_rate_limit", "250000");
@@ -245,7 +248,6 @@ int main(int argc, const char** argv) {
   evql_conf_set(conf, "server.load_limit_soft", "0.95");
   evql_conf_set(conf, "server.partitions_loading_limit_soft", "4");
   evql_conf_set(conf, "server.partitions_loading_limit_hard", "64");
-
   if (flags.isSet("standalone")) {
     evql_conf_set(conf, "cluster.coordinator", "standalone");
     evql_conf_set(conf, "cluster.allowed_hosts", "0.0.0.0/0");
